@@ -919,7 +919,6 @@ SGI O2:
 		actually emulate "pipeline" and detect pipeline overruns,
 			i.e. require guest OSes to wait? but then, when to
 			execute commands in the pipeline? (low-prio)
-		correct x,y direction for primitives!
 		i2c vga data, for NetBSD etc.
 		3D graphics? i.e. depth buffers, triangles, etc.
 
