@@ -4789,3 +4789,4 @@ Changelog for GXemul:
 		Only allow SGI O2 MTE memory fills to pages that are in a TLB.
 20181026	Some cleanup and refactoring of the O2 rendering engine and 
 		other things.
+		ARCS environment fixes (better values for diskless booting).
